java.lang.StackOverflowError appears: price -i bb -d COINBASE_PRO -k aa -p aa -e aa